--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Shop Nest</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="about.css">
   <link rel="stylesheet" href="contact.css">
+  <!-- <link rel="stylesheet" href="shirt.css"> -->
   <link rel="icon" href="img/Vmake1746673439497.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet"
@@ -16,36 +18,52 @@
   <!-- Linking SwiperJS css -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-             <!-- animation link -->
-
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-
-   <link
+ <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
 />
 
+             <!-- animation link -->
+
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   
 
 </head>
 
+
 <body>
     
-<!-- NAV BAR -->
+  <!-- NAV BAR -->
+
 <header class="header">
   <a href="#" class="logo">Zyra</a>
+
+
+
+  <!-- Navigation -->
   <div class="center-nav">
     <nav class="navbar">
-      <a href="index.html">Home</a>
+      <a href="index.html" >Home</a>
+
       <div class="dropdown">
         <a href="#">Men's ▾</a>
         <div class="dropdown-content">
           <a href="shirt.html">Shirts</a>
-          <a href="t-shirt.html">T-Shirts</a>
-          <a href="#">Jeans</a>
-          <a href="#">Shoes</a>
-          <a href="#">Watches</a>
+          <a href="tshirt.html">T-Shirts</a>
+          <a href="jeans.html">Jeans</a>
+          <a href="shoes.html">Shoes</a>
+          <a href="watch.html">Watches</a>
         </div>
       </div>
+
       <div class="dropdown">
         <a href="#">Women's ▾</a>
         <div class="dropdown-content">
@@ -56,18 +74,18 @@
           <a href="wwatch.html">Watch</a>
         </div>
       </div>
+
       <a href="about.html">About</a>
       <a href="contact.html" class="active">Contact</a>
     </nav>
   </div>
-   <!-- Cart Icon -->
-   <div class="cartt-icon">
-     <!-- <i class="ri-shopping-bag-line fa-cart-shopping "></i> -->
-   <i class="ri-shopping-bag-line cart"></i>
-     <span class="cart-item-count"></span>
-   </div>
-</header>
 
+   <div class="cartt-icon">
+     
+     <i class="ri-shopping-bag-line cart"></i>
+     <i class="fa-solid fa-bars" id="menu-icon"></i>
+   </div>   
+</header>
 
  <div class="bg-img">
     <p class="fontstyle1" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
