--- a/shirt.html
+++ b/shirt.html
@@ -27,12 +27,11 @@
   <a href="#" class="logo">Zyra</a>
 
   <!-- Hamburger Icon -->
-  <i class="fa-solid fa-bars" id="menu-icon"></i>
-
+  
   <!-- Navigation -->
   <div class="center-nav">
     <nav class="navbar">
-      <a href="index.html" >Home</a>
+      <a href="index.html">Home</a>
 
       <div class="dropdown">
         <a href="#" class="active">Men's ▾</a>
@@ -60,12 +59,14 @@
       <a href="contact.html">Contact</a>
     </nav>
   </div>
-
+  
   <!-- Cart Icon -->
-   <div id="cart-icon">
-     <i class="ri-shopping-bag-line fa-cart-shopping "></i>
-     <span class="cart-item-count"></span>
-   </div>
+  <div id="cart-icon">
+    <i class="ri-shopping-bag-line fa-cart-shopping "></i>
+    <i class="ri-shopping-bag-line cart"></i>
+    <span class="cart-item-count"></span>
+  </div>
+  <i class="fa-solid fa-bars" id="menu-icon"></i>
   
 </header>
 
@@ -181,6 +182,7 @@
 </script>
 
   <script src="cart.js"></script>
+  <script src="script.js"></script>
   <script>
   const menuIcon = document.querySelector('#menu-icon');
   const navbar = document.querySelector('.navbar');
