--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 
-                 <div class="contact-form" data-aos="fade-left">
+                 <div class="contact-form" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <form action="#" method="POST">
                         <div class="form-group">
                             <label for="name">Your Name</label>
