--- a/perfume.html
+++ b/perfume.html
@@ -61,12 +61,11 @@
     </nav>
   </div>
 
-  <!-- Cart Icon -->
-   <div id="cart-icon">
-     <i class="ri-shopping-bag-line fa-cart-shopping "></i>
-     <span class="cart-item-count"></span>
+  <div class="cartt-icon">
+    
+    <i class="ri-shopping-bag-line cart"></i>
+    <i class="fa-solid fa-bars" id="menu-icon"></i>
    </div>
-  
 </header>
 
 <div class="bg-img">
@@ -181,6 +180,7 @@
 </script>
 
   <script src="cart.js"></script>
+  <script src="script.js"></script>
   <script>
   const menuIcon = document.querySelector('#menu-icon');
   const navbar = document.querySelector('.navbar');
