--- a/watch.html
+++ b/watch.html
@@ -62,9 +62,10 @@
   </div>
 
   <!-- Cart Icon -->
-   <div id="cart-icon">
-     <i class="ri-shopping-bag-line fa-cart-shopping "></i>
-     <span class="cart-item-count"></span>
+<div class="cartt-icon">
+    
+    <i class="ri-shopping-bag-line cart"></i>
+    <i class="fa-solid fa-bars" id="menu-icon"></i>
    </div>
   
 </header>
@@ -181,6 +182,7 @@
 </script>
 
   <script src="cart.js"></script>
+  <script src="script.js"></script>
   <script>
   const menuIcon = document.querySelector('#menu-icon');
   const navbar = document.querySelector('.navbar');
