--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <button class="cta-btn">Explore Now</button>
                 </div>
                 <div class="slide-overlay"></div>
-                <img src="/card/bn1.jpeg" alt="Nature">
+                <img src="/card/p3.jpg" alt="Nature">
             </div>
             <div class="slide">
                 <div class="slide-content">
@@ -128,7 +128,7 @@
                     <button class="cta-btn">Start Journey</button>
                 </div>
                 <div class="slide-overlay"></div>
-                <img src="card/bn4.jpeg" alt="Mountain">
+                <img src="card/p1.jpg" alt="Mountain">
             </div>
             <div class="slide">
                 <div class="slide-content">
@@ -137,7 +137,7 @@
                     <button class="cta-btn">Start Journey</button>
                 </div>
                 <div class="slide-overlay"></div>
-                <img src="card/bn5.jpeg" alt="Mountain">
+                <img src="card/p2.jpg" alt="Mountain">
             </div>
         </div>
         
