--- a/watch.html
+++ b/watch.html
@@ -27,25 +27,24 @@
   <a href="#" class="logo">Zyra</a>
 
   <!-- Hamburger Icon -->
-  <i class="fa-solid fa-bars" id="menu-icon"></i>
-
+  
   <!-- Navigation -->
   <div class="center-nav">
     <nav class="navbar">
-      <a href="index.html" >Home</a>
+      <a href="index.html">Home</a>
 
       <div class="dropdown">
         <a href="#" class="active">Men's ▾</a>
         <div class="dropdown-content">
-          <a href="shirt.html" >Shirts</a>
-          <a href="tshirt.html">T-Shirts</a>
-          <a href="jeans.html" >Jeans</a>
-          <a href="shoes.html" >Shoes</a>
+          <a href="shirt.html">Shirts</a>
+          <a href="tshirt.html" >T-Shirts</a>
+          <a href="jeans.html">Jeans</a>
+          <a href="shoes.html">Shoes</a>
           <a href="watch.html" class="active">Watches</a>
         </div>
       </div>
 
-      <div class="dropdown">
+     <div class="dropdown">
         <a href="#">Women's ▾</a>
         <div class="dropdown-content">
           <a href="kurti.html">Kurta</a>
@@ -60,13 +59,14 @@
       <a href="contact.html">Contact</a>
     </nav>
   </div>
-
+  
   <!-- Cart Icon -->
-<div class="cartt-icon">
-    
+  <div id="cart-icon">
+    <i class="ri-shopping-bag-line fa-cart-shopping "></i>
     <i class="ri-shopping-bag-line cart"></i>
-    <i class="fa-solid fa-bars" id="menu-icon"></i>
-   </div>
+    <span class="cart-item-count"></span>
+  </div>
+  <i class="fa-solid fa-bars" id="menu-icon"></i>
   
 </header>
 
@@ -191,9 +191,8 @@
     navbar.classList.toggle('active');
   });
 </script>
-  <!-- <script src="products.json"></script> -->
 
-  <script>
+<script>
   window.addEventListener('scroll', () => {
     const header = document.querySelector('.header');
     if (window.scrollY > 0) {
@@ -203,5 +202,7 @@
     }
   });
 </script>
+  <!-- <script src="products.json"></script> -->
+
 </body>
 </html>
