--- a/tshirt.html
+++ b/tshirt.html
@@ -61,9 +61,10 @@
   </div>
   
   <!-- Cart Icon -->
-  <div id="cart-icon">
+  
+ <div id="cart-icon">
     <i class="ri-shopping-bag-line fa-cart-shopping "></i>
-    <i class="ri-shopping-bag-line cart"></i>
+    <!-- <i class="ri-shopping-bag-line cart"></i> -->
     <span class="cart-item-count"></span>
   </div>
   <i class="fa-solid fa-bars" id="menu-icon"></i>
@@ -94,12 +95,12 @@
     </div> -->
   </div>
   <div class="total">
-    <div class="total-title">Total</div>
-    <div class="total-price">$0</div>
+      <span class="total-title">Total</span>
+      <span class="total-price">$0</span>
+    </div>
+    <button class="btn-buy">Buy Now</button>
+    <i class="ri-close-line" id="cart-close"></i>
   </div>
-  <button class="btn-buy">Buy Now</button>
-  <i class="ri-close-line" id="cart-close"></i>
-</div>
 
   <section class="shop">
     <h1 class="section-title">Shop Products</h1>
