--- a/perfume.html
+++ b/perfume.html
@@ -63,7 +63,7 @@
   <!-- Cart Icon -->
   <div id="cart-icon">
     <i class="ri-shopping-bag-line fa-cart-shopping "></i>
-    <i class="ri-shopping-bag-line cart"></i>
+    <!-- <i class="ri-shopping-bag-line cart"></i> -->
     <span class="cart-item-count"></span>
   </div>
   <i class="fa-solid fa-bars" id="menu-icon"></i>
